# Article_Checklist_Manager

./: .gitignore  CODING_TODO.md  Colab_Tutorial.ipynb  FORMAT.md  MILESTONES.md  README.md  app.js  append_guideline.py  checklist.js  eslint.config.js  family.css  family.js  index.html  journal_guidelines.json  no_robot_policy.ms  package-lock.json  package.json  pyproject.toml  styles.css  validate_json.py
.github/workflows/: ci.yml
acm/: __init__.py  analysis.py  cli.py  colab.py  domain.py  drive.py  gui.py  journal.py  manuscript.py  progress.py  schema.py
data/: guideline-types.js  guidelines-cache.js  guidelines-loader.js
export/: export-utils.js
figures/: figure-inspector.js
parsers/: manuscript.worker.js  section-detector.js
schemas/: guideline-schema.json  tasknode.schema.yaml
src/acm/: cli.py
src/utils/: family-view-utils.js  section-utils.js  task-store.js  text-utils.js  url-utils.js  url.js
tests/: family-view-utils.test.js  guidelines-loader.test.js  section-detector.test.js  task-store.test.js  test_analysis.py  test_cli.py  test_colab.py  test_domain.py  test_drive.py  test_journal.py  test_manuscript.py  test_progress.py  test_schema.py  url.test.js
validate/: validate-guidelines.worker.js  validation-status.js
web/: styles.css
